# Healside

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_agent_activation.py
backend/app/: main.py
backend/app/api/: approvals.py  auth.py  cases.py
backend/app/core/: auth.py  config.py  correlation_id.py  logging.py  rbac.py
backend/app/db/: models.py  session.py
backend/app/schemas/: approvals.py  auth.py  cases.py
backend/app/services/: audit.py  llm_client.py  orchestrator.py  validators.py
backend/app/services/agents/: __init__.py  comms.py  data_completeness.py  draft_generation.py  eligibility.py  follow_up.py  med_rec.py  normalization.py  qa.py  qa_policy.py  scheduling.py  summary.py
backend/app/workers/: celery_app.py  tasks.py
backend/data/cases/: case1.json  case2.json  case3.json  case4.json  case5.json
backend/scripts/: seed_cases.py
backend/tests/: conftest.py
backend/tests/integration/: test_orchestrate.py
backend/tests/unit/: test_agents.py  test_approvals.py  test_rbac.py  test_state_machine.py  test_validators.py
docs/: ALGORITHM_RESEARCH.md  API_STANDARDS.md  ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  SECURITY.md  SENSITIVE_FILES.md  STANDARD_COMPLIANCE_REPORT.md  TEAMROLES.md  TECHNOLOGY_STACK.md  TESTING.md  UI_UX_SPECIFICATION.md  UI_UX_STANDARDS.md  WORKFLOW.md
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json
infra/: .env.example  README.md
(+52 files in other folders)
